--- a/autodarts-extension/extension.html
+++ b/autodarts-extension/extension.html
@@ -2,5 +2,14 @@
   <body>
     <h1>:)</h1>
     <script src="script.js"></script>
+    <style>
+    .ad-ext-player img {
+      opacity: 0.5;
+    }
+
+    .ad-ext-player .ad-ext-player-active img {
+      opacity: 1;
+    }
+    </style>
   </body>
 </html>
